--- a/from.html
+++ b/from.html
@@ -10,6 +10,10 @@
             margin: 5px 10px;
         }
 
+        fieldset {
+            width: 100%;
+        }
+
         label {
             display: block;
             margin-bottom: 10px;
