--- a/from.html
+++ b/from.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lottery</title>
+    <title>Lottery 2024</title>
     <style>
         * {
             margin: 5px 10px;
@@ -75,7 +75,7 @@
         </fieldset>
         <fieldset>
             <legend>Describe your thoughts and feelings, </legend>
-            <textarea name="" id="" cols="30" rows="6"></textarea>
+            <textarea name="" id="" cols="20" rows="10"></textarea>
         </fieldset>
         <input type="reset" value="Reset">
         <input type="submit" value="Submit">
