--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         </label>
         <label for="name">Last name <input id="name" type="text" placeholder="Type your name">
         </label>
-
+        <label for="Number">Your Phone <input id="Number" type="Number" placeholder="Type your phone number">
+        </label>
         <label for="email">Your Email <input id="email" type="text" placeholder="Type your email">
         </label>
         <fieldset>
