--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Lottery 2024</title>
     <style>
         * {
-            margin: 0px 15px 0px 5px;
+            margin: 5px 10px;
         }
 
         fieldset {
