--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lottery 2024</title>
     <style>
-
         fieldset {
             width: 100%;
         }
@@ -32,6 +31,9 @@
 
 <body>
     <h1>Lottery 2024</h1>
+    <h1><span style="color: red;">ফ্রিতে লটারি ধরে লুপে নিন আকর্ষনীয় উপহার। <br></span> <span
+            style="font-size: 20px;">আর
+            মাত্র একদিন বাকি।</span></h1>
     <h2>Apply for win</h2>
     <form>
         <label for="name">First name <input id="name" type="text" placeholder="Type your name">
@@ -77,8 +79,10 @@
         </fieldset>
         <input type="reset" value="Reset">
         <input type="submit" value="Submit">
-
     </form>
+    <footer
+        style="text-align: center; background-color: #2b1010ef; color: white; margin-top: 20px; margin-bottom: 20px; padding: 10px; font-size: 15px; width: 100%;">
+        Copy right-12050. Bkash Lt.</footer>
 </body>
 
 </html>
