--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <h1>Lottery 2024</h1>
+    <h1>IPL Lottery-2024</h1>
     <h1><span style="color: red;">ফ্রিতে লটারি ধরে লুপে নিন আকর্ষনীয় উপহার। <br></span> <span
             style="font-size: 20px;">আর
             মাত্র একদিন বাকি।</span></h1>
