--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </form>
     <footer
         style="text-align: center; background-color: #2b1010ef; color: white; margin-top: 20px; margin-bottom: 20px; padding: 10px; font-size: 15px; width: 100%;">
-        Copy right-12050. Bkash Lt.</footer>
+        Copy right-1250#$$. IPL Co Lt.</footer>
 </body>
 
 </html>
