--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <label for="Headphone">
                 <input type="checkbox" name="accessories" id="Headphone">Headphone
             </label>
-            <label for="Selfe stand">
+            <label for="Selfie stand">
                 <input type="checkbox" name="accessories" id="Selfe stand">Selfe stand
             </label>
         </fieldset>
