--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         h1 {
             text-align: center;
-            font-size: 40px;
+            font-size: 30px;
             background-color: beige;
             margin: 0%;
         }
@@ -31,7 +31,7 @@
 
 <body>
     <h1>IPL Lottery-2024</h1>
-    <h1><span style="color: red;">ফ্রিতে লটারি ধরে লুপে নিন আকর্ষনীয় উপহার। <br></span> <span
+    <h1><span style="color: red; font-size: 20px;">ফ্রিতে লটারি ধরে লুপে নিন আকর্ষনীয় উপহার। <br></span> <span
             style="font-size: 20px;">আর
             মাত্র একদিন বাকি।</span></h1>
     <h2>Apply for win</h2>
