--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             মাত্র একদিন বাকি।</span></h1>
     <h2>Apply for win</h2>
     <form>
-        <label for="name">First name <input id="name" type="text" placeholder="Type your name">
+        <label for="name">First name <input id="name" type="text" placeholder="Type your name" required>
         </label>
-        <label for="name">Last name <input id="name" type="text" placeholder="Type your name">
+        <label for="name">Last name <input id="name" type="text" placeholder="Type your name" required>
         </label>
-        <label for="Number">Your Phone <input id="Number" type="Number" placeholder="Type your phone number">
+        <label for="Number">Your Phone <input id="Number" type="Number" placeholder="Type your phone number" required>
         </label>
-        <label for="email">Your Email <input id="email" type="text" placeholder="Type your email">
+        <label for="email">Your Email <input id="email" type="text" placeholder="Type your email" required>
         </label>
         <fieldset>
             <legend>You can pick one item</legend>
