--- a/index.html
+++ b/index.html
@@ -4,85 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lottery 2024</title>
-    <style>
-        fieldset {
-            width: 100%;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 10px;
-            margin-top: 10px;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 30px;
-            background-color: beige;
-            margin: 0%;
-        }
-
-        h2 {
-            text-decoration: underline;
-        }
-    </style>
+    <title>IT-Compeny</title>
+    <link rel="stylesheet" href="styles/nav.css">
+    <link rel="shortcut icon" href="images/Modern-IT-Logo-Design-Company-Logo-Graphics-14669164-3-580x386.jpg"
+        type="image/x-icon">
 </head>
 
 <body>
-    <h1>IPL Lottery-2024</h1>
-    <h1><span style="color: red; font-size: 20px;">ফ্রিতে লটারি ধরে লুপে নিন আকর্ষনীয় উপহার। <br></span> <span
-            style="font-size: 20px;">আর
-            মাত্র একদিন বাকি।</span></h1>
-    <h2>Apply for win</h2>
-    <form>
-        <label for="name">First name <input id="name" type="text" placeholder="Type your name" required>
-        </label>
-        <label for="name">Last name <input id="name" type="text" placeholder="Type your name" required>
-        </label>
-        <label for="Number">Your Phone <input id="Number" type="Number" placeholder="Type your phone number" required>
-        </label>
-        <label for="email">Your Email <input id="email" type="text" placeholder="Type your email" required>
-        </label>
-        <fieldset>
-            <legend>You can pick one item</legend>
-            <label for="Iphone 15 Pro Max">
-                <input type="radio" name="Mobile" id="Iphone 15 Pro Max">Iphone 15 Pro Max
-                <label for="Samsung S-24 Ultra">
-                    <input type="radio" name="Mobile" id="Samsung S-24 Ultra">Samsung S-24 Ultra
-                </label>
-                <label for="Google Pixel 8 Pro">
-                    <input type="radio" name="Mobile" id="Google Pixel 8 Pro">Google Pixel 8 Pro
-                </label>
-                <label for="One Plus 10 Pro">
-                    <input type="radio" name="Mobile" id="One Plus 10 Pro">One Plus 10 Pro
-                </label>
-        </fieldset>
-        <fieldset>
-            <legend>Select one or more product</legend>
-            <label for="Charger">
-                <input type="checkbox" name="accessories" id="Charger">Charger
-            </label>
-            <label for="Extra Battery">
-                <input type="checkbox" name="accessories" id="Extra Battery">Extra Battery
-            </label>
-            <label for="Headphone">
-                <input type="checkbox" name="accessories" id="Headphone">Headphone
-            </label>
-            <label for="Selfie stand">
-                <input type="checkbox" name="accessories" id="Selfe stand">Selfe stand
-            </label>
-        </fieldset>
-        <fieldset>
-            <legend>Describe your thoughts and feelings, </legend>
-            <textarea name="" id="" cols="35" rows="10"></textarea>
-        </fieldset>
-        <input type="reset" value="Reset">
-        <input type="submit" value="Submit">
-    </form>
-    <footer
-        style="text-align: center; background-color: #2b1010ef; color: white; margin-top: 20px; margin-bottom: 20px; padding: 10px; font-size: 15px; width: 100%;">
-        Copy right-1250#$$. IPL Co Lt.</footer>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="form.html">Form</a></li>
+                <li><a href="midea.html">Midea</a></li>
+                <li><a href="Salary.html">Salary sheat</a></li>
+                <li><a href="Contact.html">Contact Us</a></li>
+                <li><a href="ditals.html">Ditals</a></li>
+            </ul>
+        </nav>
+        <h1>Welcome To Our Company</h1>
+    </header>
+    <article>
+        <p><span style="font-size: 30px;">Lorem ipsum </span> dolor sit amet consectetur adipisicing elit. Eveniet, tenetur. Unde, harum dicta aliquid ipsa, corporis praesentium iure ipsam rem doloremque repellendus veritatis. Quis illo a eius odio? Aliquam animi fugiat labore, iste, illo at earum alias, consequuntur quos omnis deleniti esse facilis! Quos numquam tenetur explicabo totam, illum id ab esse quae, aliquam rerum necessitatibus consequuntur, delectus ut adipisci.</p>
+    </article>
+
 </body>
 
 </html>
