--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lottery 2024</title>
+    <title>IT-Compeny</title>
     <link rel="shortcut icon" href="images/hand-shake-logo-illustration-art-background-33467866.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles/nav.css">
     <style>
