--- a/table.html
+++ b/table.html
@@ -25,6 +25,7 @@
             text-align: center;
             font-size: 40px;
         }
+
         /* Table style close */
     </style>
 </head>
@@ -36,7 +37,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="form.html">Form</a></li>
                 <li><a href="midea.html">Midea</a></li>
-                <li><a href="Salary.html">Salary sheat</a></li>
+                <li><a href="table.html">Salary sheat</a></li>
                 <li><a href="Contact.html">Contact Us</a></li>
                 <li><a href="ditals.html">Ditals</a></li>
             </ul>
