--- a/ditals.html
+++ b/ditals.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="form.html">Form</a></li>
                 <li><a href="midea.html">Midea</a></li>
-                <li><a href="Salary.html">Salary sheat</a></li>
+                <li><a href="table.html">Salary sheat</a></li>
                 <li><a href="Contact.html">Contact Us</a></li>
                 <li><a href="ditals.html">Ditals</a></li>
             </ul>
