table headin style change

--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles/nav.css">
     <style>
         /* Table style start */
-        tr td {
+        tr th, tr td {
             border: 2px solid lightgray;
             font-size: 20px;
             padding: 5px;
@@ -48,10 +48,10 @@
     <table>
         <thead>
             <tr>
-                <td>No.</td>
-                <td>Full name</td>
-                <td>Position</td>
-                <td>Salary</td>
+                <th>No.</th>
+                <th>Full name</th>
+                <th>Position</th>
+                <th>Salary</th>
 
             </tr>
         </thead>
