--- a/form.html
+++ b/form.html
@@ -90,7 +90,7 @@
                 <input type="checkbox" name="accessories" id="Headphone">Headphone
             </label>
             <label for="Selfie stand">
-                <input type="checkbox" name="accessories" id="Selfe stand">Selfe stand
+                <input type="checkbox" name="accessories" id="Selfie stand">Selfe stand
             </label>
         </fieldset>
         <fieldset>
